--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 ---
-layout: default
-title: About
+title: Home
 ---
-# About page
-
-This page tells you a little bit about me.
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>{{ page.title }}</title>
+  </head>
+  <body>
+    <h1>{{ "Hello World!" | downcase }}</h1>
+  </body>
+</html>
